--- a/index.ipynb
+++ b/index.ipynb
@@ -330,7 +330,7 @@
     {
      "data": {
       "text/plain": [
-       "<filter at 0x7f3fc448f710>"
+       "<filter at 0x7fe3446c46a0>"
       ]
      },
      "execution_count": 7,
